# oldsdawn

./: .gitignore  .gitmodules  Cargo.toml  README.md  genProtos.sh  ignore.sh  justfile
crates/actions/: Cargo.toml
crates/actions/src/: legal_actions.rs  lib.rs
crates/adapters/: Cargo.toml
crates/adapters/src/: lib.rs
crates/ai/: Cargo.toml
crates/ai/src/: lib.rs
crates/ai/src/agents/: alpha_beta.rs  mod.rs  monte_carlo.rs  pick_first_action.rs  pick_random.rs
crates/ai/src/core/: legal_actions.rs  mod.rs  types.rs
crates/ai/src/heuristics/: game_state_evaluator.rs  mod.rs
crates/ai/src/predictors/: mod.rs  omniscient.rs
crates/ai/src/tournament/: main.rs  matchup.rs  mod.rs  run.rs  run_tournament.rs
crates/ai_game_integration/: Cargo.toml
crates/ai_game_integration/src/: agents.rs  evaluators.rs  lib.rs  state_node.rs
crates/ai_monte_carlo/: Cargo.toml
crates/ai_monte_carlo/src/: child_score.rs  lib.rs  monte_carlo.rs  uct1.rs
crates/ai_testing/: Cargo.toml
crates/ai_testing/scripts/: run_matchup.rs  run_nim.rs
crates/ai_testing/src/: lib.rs  nim.rs  nim_agents.rs  run_matchup_impl.rs  run_nim.rs  run_nim_impl.rs
crates/ai_tree_search/: Cargo.toml
crates/ai_tree_search/src/: alpha_beta.rs  lib.rs  minimax.rs  scored_action.rs  single_level.rs
crates/card_helpers/: Cargo.toml
crates/card_helpers/src/: abilities.rs  lib.rs  text_macro.rs
crates/cards/: Cargo.toml  build.rs
crates/cards/src/: abilities.rs  artifacts.rs  card_helpers.rs  champion_spells.rs  decklists.rs  dispatch.rs  initialize.rs  lib.rs  minions.rs  overlord_spells.rs  projects.rs  queries.rs  schemes.rs  spells.rs  test_cards.rs  update_cards.rs  weapons.rs
crates/core_ui/: Cargo.toml
crates/core_ui/src/: actions.rs  button.rs  component.rs  design.rs  flexbox.rs  lib.rs  list_cell.rs  panel.rs  style.rs  text.rs
crates/data/: Cargo.toml
crates/data/src/: actions.rs  agent_definition.rs  card_definition.rs  card_name.rs  card_state.rs  deck.rs  delegates.rs  game.rs  game_actions.rs  lib.rs  player_data.rs  player_name.rs  primitives.rs  prompt.rs  random.rs  special_effects.rs  text.rs  updates.rs  updates2.rs  utils.rs  with_error.rs
crates/display/: Cargo.toml
crates/display/src/: adapters.rs  animations.rs  assets.rs  card_sync.rs  diff.rs  full_sync.rs  interface.rs  lib.rs  positions.rs  prompts.rs  render.rs  rendering.rs  response_builder.rs  rexard_images.rs  rules_text.rs  sync.rs
crates/game_ui/: Cargo.toml
crates/game_ui/src/: action_buttons.rs  card_info.rs  lib.rs  prompt_container.rs  prompts.rs  response_button.rs  waiting_prompt.rs
crates/macros/: Cargo.toml
crates/macros/src/: lib.rs
crates/model/: Cargo.toml
crates/model/src/: card_definition.rs  card_name.rs  card_state.rs  deck.rs  delegates.rs  events.rs  game.rs  lib.rs  primitives.rs
crates/panels/: Cargo.toml
crates/panels/src/: debug_panel.rs  lib.rs  panel_address.rs  set_player_name_panel.rs
crates/plugin/: Cargo.toml
crates/plugin/src/: lib.rs
crates/prompts/: Cargo.toml
crates/prompts/src/: action_buttons.rs  prompt_container.rs  prompts.rs
crates/protos/: Cargo.toml
crates/protos/src/: gen_protos.rs  lib.rs  spelldawn.rs
crates/raids/: Cargo.toml
crates/raids/src/: access.rs  activation.rs  begin.rs  continuation.rs  defenders.rs  encounter.rs  lib.rs  traits.rs
crates/rules/: Cargo.toml
crates/rules/src/: abilities.rs  actions.rs  card_helpers.rs  card_prompt.rs  card_text.rs  champion_spells.rs  constants.rs  dispatch.rs  flags.rs  helpers.rs  lib.rs  mana.rs  minions.rs  mutations.rs  projects.rs  queries.rs  raid.rs  raid_actions.rs  raid_phases.rs  schemes.rs  weapons.rs
crates/rules/src/raid/: access.rs  activation.rs  begin.rs  continuation.rs  core.rs  defenders.rs  encounter.rs  mod.rs  traits.rs
crates/server/: Cargo.toml
crates/server/src/: agent_response.rs  database.rs  debug.rs  in_memory_database.rs  lib.rs  requests.rs
crates/spelldawn/: Cargo.toml
crates/spelldawn/benches/: benchmark.rs  benchmarks.rs
crates/spelldawn/src/: database.rs  main.rs  server.rs
crates/spelldawn/tests/it/: main.rs
crates/spelldawn/tests/it/ai/: minimax_tests.rs  mod.rs  monte_carlo_tests.rs  tree_search_tests.rs
crates/spelldawn/tests/it/cards/: artifact_tests.rs  champion_spell_tests.rs  minion_tests.rs  mod.rs  overlord_spell_tests.rs  project_tests.rs  scheme_tests.rs  spell_tests.rs  weapon_tests.rs
crates/spelldawn/tests/it/core/: action_tests.rs  create_game_tests.rs  mod.rs  raid_tests.rs
crates/spelldawn/tests/it/core/snapshots/: it__core__action_tests__activate_ability.snap  it__core__action_tests__connect.snap  it__core__action_tests__connect_to_ongoing.snap  it__core__action_tests__draw_card.snap  it__core__action_tests__gain_mana.snap  it__core__action_tests__level_up_room.snap  it__core__action_tests__overlord_win_game.snap  it__core__action_tests__play_card.snap  it__core__action_tests__play_hidden_card.snap  it__core__action_tests__score_overlord_card.snap  it__core__action_tests__switch_turn.snap  it__core__action_tests__triggered_ability.snap  it__core__create_game_tests__both_keep_opening_hands.snap  it__core__create_game_tests__connect_to_new_game.snap  it__core__create_game_tests__create_new_game.snap  it__core__create_game_tests__keep_opening_hand.snap  it__core__create_game_tests__mulligan_opening_hand.snap  it__core__raid_tests__activate_room.snap  it__core__raid_tests__cannot_activate.snap  (+37 more)
crates/spelldawn/tests/it/rules/: action_tests.rs  actions.rs  champion_spell_tests.rs  champion_spells.rs  create_game_tests.rs  mod.rs  raid_tests.rs  spell_tests.rs
crates/test_utils/: Cargo.toml
crates/test_utils/src/: client.rs  fake_database.rs  lib.rs  summarize.rs  test_games.rs
crates/ui/: Cargo.toml
crates/ui/src/: card_info.rs  colors.rs  components.rs  core.rs  fonts.rs  icons.rs  lib.rs  macros.rs  panel.rs  primitives.rs  prompts.rs
crates/ui_game/: Cargo.toml
crates/ui_game/src/: action_buttons.rs  card_info.rs  lib.rs  prompt_container.rs  prompts.rs  response_button.rs  waiting_prompt.rs
(+412 files in other folders)
