[package]
name = "spelldawn"
version = "0.1.0"
edition = "2021"
default-run = "spelldawn"

[[bin]]
name = "spelldawn"
path = "src/main.rs"

[[bin]]
name = "genprotos"
path = "src/bin/gen_protos.rs"

[dependencies]
async-stream = "0.3.2"
futures = "0.3.18"
futures-core = "0.3.18"
futures-util = "0.3.18"
prost = "0.9.0"
prost-types = "0.9.0"
rand = "0.8.4"
serde = { version = "1.0.130", features = ["derive"] }
tokio = { version = "1.14.0", features = ["macros", "rt-multi-thread", "sync", "time"] }
tokio-stream = "0.1.8"
tonic = "0.6.1"
tonic-build = "0.6.0"
tonic-web = "0.2"
