[package]
name = "actions"
version = "0.0.0"
description = "Top-level routing for user actions"
license = "Apache-2.0"
edition = "2021"

[lib]
doctest = false
test = false

[dependencies]
anyhow = "1.0.58"
dashmap = "5.3.4"
enum-iterator = "1.1.3"
fallible-iterator = "0.2.0"
once_cell = "1.13.0"
tracing = { version = "0.1.35", features = ["max_level_debug", "release_max_level_warn"] }

data = { path = "../data", version = "0.0.0" }
rules = { path = "../rules", version = "0.0.0" }
with_error = { path = "../with_error", version = "0.0.0" }
