[package]
name = "ai"
version = "0.0.0"
description = "Contains different implementations of Game AI"
license = "Apache-2.0"
edition = "2021"

[lib]
doctest = false
test = false

[dependencies]
anyhow = "1.0.51"
rand = "0.8.4"
serde = { version = "1.0.132", features = ["derive"] }
enum-kinds = "0.5.1"
enum-iterator = "0.7.0"
linkme = "0.2.10"
once_cell = "1.8.0"

rules = { path = "../rules", version = "0.0.0" }
data = { path = "../data", version = "0.0.0" }
