[package]
name = "ai"
version = "0.0.0"
description = "Contains different implementations of Game AI"
license = "Apache-2.0"
edition = "2021"

[lib]
doctest = false
test = false

[[bin]]
name = "tournament"
path = "src/tournament/main.rs"
test = false

[dependencies]
anyhow = "1.0.58"
rand = "0.8.5"
enum-iterator = "1.1.3"
ordered-float = "3.0.0"
petgraph = "0.6.2"

cards = { path = "../cards", version = "0.0.0" }
data = { path = "../data", version = "0.0.0" }
rules = { path = "../rules", version = "0.0.0" }
with_error = { path = "../with_error", version = "0.0.0" }
