[package]
name = "ai_testing"
version = "0.0.0"
description = "Tools for testing AI implementations"
license = "Apache-2.0"
edition = "2021"

[lib]
doctest = false
test = false

[[bin]]
name = "run_nim"
path = "scripts/run_nim.rs"
test = false

[[bin]]
name = "run_matchup"
path = "scripts/run_matchup.rs"
test = false

[dependencies]
anyhow = "1.0.58"
clap = {version = "3.2.16", features = ["derive"]}

ai_core = { path = "../ai_core", version = "0.0.0" }
ai_game_integration = { path = "../ai_game_integration", version = "0.0.0" }
ai_monte_carlo = { path = "../ai_monte_carlo", version = "0.0.0" }
ai_tree_search = { path = "../ai_tree_search", version = "0.0.0" }
cards = { path = "../cards", version = "0.0.0" }
data = { path = "../data", version = "0.0.0" }
rules = { path = "../rules", version = "0.0.0" }
with_error = { path = "../with_error", version = "0.0.0" }
