[package]
name = "ai_tree_search"
version = "0.0.0"
description = "Algorithms for tree-search AI, e.g. minimax"
license = "Apache-2.0"
edition = "2021"

[lib]
doctest = false
test = false

[dependencies]
anyhow = "1.0.58"
ai_core = { path = "../ai_core", version = "0.0.0" }
with_error = { path = "../with_error", version = "0.0.0" }
