[package]
name = "cards"
version = "0.0.0"
description = "Card definitions"
license = "Apache-2.0"
edition = "2021"

[lib]
doctest = false
test = false

[dependencies]
once_cell = "1.8.0"
maplit = "1.0.2"


data = { path = "../data", version = "0.0.0" }
display = { path = "../display", version = "0.0.0" }
rules = { path = "../rules", version = "0.0.0" }

[build-dependencies]
anyhow = "1.0.51"
walkdir = "2.3.2"
regex = "1.5.6"
