[package]
name = "cards"
version = "0.0.0"
description = "Card definitions"
license = "Apache-2.0"
edition = "2021"

[lib]
doctest = false
test = false

[[bin]]
name = "update_cards"
path = "src/update_cards.rs"
test = false

[dependencies]
anyhow = "1.0.51"
maplit = "1.0.2"
once_cell = "1.8.0"
rand = "0.8.4"
regex = "1.5.6"
walkdir = "2.3.2"

data = { path = "../data", version = "0.0.0" }
display2 = { path = "../display2", version = "0.0.0" }
rules = { path = "../rules", version = "0.0.0" }
