[package]
name = "cards"
version = "0.0.0"
description = "Card definitions"
license = "Apache-2.0"
edition = "2021"

[lib]
doctest = false
test = false

[[bin]]
name = "update_cards"
path = "src/update_cards.rs"
test = false

[dependencies]
anyhow = "1.0.58"
maplit = "1.0.2"
once_cell = "1.13.0"
regex = "1.6.0"
walkdir = "2.3.2"

card_helpers = { path = "../card_helpers", version = "0.0.0" }
data = { path = "../data", version = "0.0.0" }
display = { path = "../display", version = "0.0.0" }
rules = { path = "../rules", version = "0.0.0" }
