[package]
name = "data"
version = "0.0.0"
description = "Data types used to represent game state"
license = "Apache-2.0"
edition = "2021"

[lib]
doctest = false
test = false

[dependencies]
convert_case = "0.5.0"
rand = "0.8.4"
serde = { version = "1.0.132", features = ["derive"] }
enum-kinds = "0.5.1"
strum_macros = "0.23"

macros = { path = "../macros", version = "0.0.0" }
