[package]
name = "data"
version = "0.0.0"
description = "Data types used to represent game state"
license = "Apache-2.0"
edition = "2021"

[lib]
doctest = false

[dependencies]
anyhow = "1.0.51"
convert_case = "0.5.0"
rand = { version = "0.8.4", features = ["serde1"] }
rand_xoshiro = { version = "0.6.0", features = ["serde1"] }
serde = { version = "1.0.132", features = ["derive"] }
serde_with = "1.14.0"
enum-iterator = "0.7.0"
enum-kinds = "0.5.1"
strum_macros = "0.23"

macros = { path = "../macros", version = "0.0.0" }
