[package]
name = "data"
version = "0.0.0"
description = "Data types used to represent game state"
license = "Apache-2.0"
edition = "2021"

[lib]
doctest = false

[dependencies]
anyhow = "1.0.58"
clap = {version = "3.2.16", features = ["derive"]}
convert_case = "0.5.0"
enum-iterator = "1.1.3"
enum-kinds = "0.5.1"
fallible-iterator = "0.2.0"
rand = { version = "0.8.5", features = ["serde1"] }
rand_xoshiro = { version = "0.6.0", features = ["serde1"] }
serde = { version = "1.0.138", features = ["derive"] }
serde_with = "1.14.0"
strum_macros = "0.24.2"

macros = { path = "../macros", version = "0.0.0" }
with_error = { path = "../with_error", version = "0.0.0" }
