[package]
name = "display"
version = "0.0.0"
description = "Converts internal game state representation into a format the client can understand"
license = "Apache-2.0"
edition = "2021"

[lib]
doctest = false
test = false

[dependencies]
anyhow = "1.0.51"
bitflags = "1.3.2"
dashmap = "5.0.0"
enum-iterator = "0.7.0"
fallible-iterator = "0.2.0"
if_chain = "1.0.2"
itertools = "0.10.3"
once_cell = "1.8.0"
tracing = { version = "0.1.29", features = ["max_level_debug", "release_max_level_warn"] }

adapters = { path = "../adapters", version = "0.0.0" }
rules = { path = "../rules", version = "0.0.0" }
data = { path = "../data", version = "0.0.0" }
oldui = { path = "../oldui", version = "0.0.0" }
protos = { path = "../protos", version = "0.0.0" }
ui_core = { path = "../ui_core", version = "0.0.0"}
ui_game = { path = "../ui_game", version = "0.0.0" }
