[package]
name = "display"
version = "0.0.0"
description = "Converts internal game state representation into a format the client can understand"
license = "Apache-2.0"
edition = "2021"

[lib]
doctest = false
test = false

[dependencies]
anyhow = "1.0.58"
bitflags = "1.3.2"
dashmap = "5.3.4"
enum-iterator = "1.1.3"
fallible-iterator = "0.2.0"
if_chain = "1.0.2"
itertools = "0.10.3"
once_cell = "1.13.0"
tracing = { version = "0.1.35", features = ["max_level_debug", "release_max_level_warn"] }

adapters = { path = "../adapters", version = "0.0.0" }
rules = { path = "../rules", version = "0.0.0" }
data = { path = "../data", version = "0.0.0" }
protos = { path = "../protos", version = "0.0.0" }
core_ui = { path = "../core_ui", version = "0.0.0"}
game_ui = { path = "../game_ui", version = "0.0.0" }
