[package]
name = "display"
version = "0.0.0"
description = "Converts internal game state representation into a format the client can understand"
license = "Apache-2.0"
edition = "2021"

[lib]
doctest = false
test = false

[dependencies]
anyhow = "1.0.58"
enum-iterator = "1.1.3"
fallible-iterator = "0.2.0"

actions = { path = "../actions", version = "0.0.0" }
adapters = { path = "../adapters", version = "0.0.0" }
raids = { path = "../raids", version = "0.0.0" }
rules = { path = "../rules", version = "0.0.0" }
data = { path = "../data", version = "0.0.0" }
protos = { path = "../protos", version = "0.0.0" }
core_ui = { path = "../core_ui", version = "0.0.0"}
prompts = { path = "../prompts", version = "0.0.0" }
with_error = { path = "../with_error", version = "0.0.0" }
