[package]
name = "game_ui"
version = "0.0.0"
description = "Renders UI elements displayed during card game sessions"
license = "Apache-2.0"
edition = "2021"

[lib]
doctest = false
test = false

[dependencies]
anyhow = "1.0.58"

adapters = {path = "../adapters", version = "0.0.0"}
data = { path = "../data", version = "0.0.0" }
protos = { path = "../protos", version = "0.0.0" }
rules = { path = "../rules", version = "0.0.0" }
core_ui = { path = "../core_ui", version = "0.0.0" }
with_error = { path = "../with_error", version = "0.0.0" }
