[package]
name = "macros"
version = "0.0.0"
description = "Macros used throughout the project"
license = "Apache-2.0"
edition = "2021"

[lib]
proc-macro = true
doctest = false
test = false

[dependencies]
proc-macro2 = "1.0.40"
quote = "1.0.20"
syn = { version = "1.0.98", features = ["parsing", "extra-traits", "visit"] }

