[package]
name = "model"
version = "0.0.0"
description = "Data types used to represent game state"
license = "Apache-2.0"
edition = "2021"

[lib]
doctest = false

[dependencies]
convert_case = "0.4.0"
diff-struct = "0.4.0"
rand = "0.8.4"
serde = { version = "1.0.132", features = ["derive"] }
strum = "0.23"
strum_macros = "0.23"
