[package]
name = "panels"
version = "0.0.0"
description = "Renders user interface panels, game menus, windows, etc"
license = "Apache-2.0"
edition = "2021"

[lib]
doctest = false
test = false

[dependencies]
anyhow = "1.0.51"
tracing = { version = "0.1.29", features = ["max_level_debug", "release_max_level_warn"] }

data = { path = "../data", version = "0.0.0" }
display = { path = "../display", version = "0.0.0" }
rules = { path = "../rules", version = "0.0.0" }
ui = { path = "../ui", version = "0.0.0" }
protos = { path = "../protos", version = "0.0.0" }
