[package]
name = "panels"
version = "0.0.0"
description = "Renders user interface panels, game menus, windows, etc"
license = "Apache-2.0"
edition = "2021"

[lib]
doctest = false
test = false

[dependencies]
anyhow = "1.0.58"

data = { path = "../data", version = "0.0.0" }
core_ui = { path = "../core_ui", version = "0.0.0" }
protos = { path = "../protos", version = "0.0.0" }
