[package]
name = "plugin"
version = "0.0.0"
description = "Unity native plugin for spelldawn"
license = "Apache-2.0"
edition = "2021"

[lib]
doctest = false
test = false
name = "spelldawn"
crate-type = ["cdylib", "staticlib"]

[dependencies]
ai = { path = "../ai", version = "0.0.0" }
cards = { path = "../cards", version = "0.0.0" }
data = { path = "../data", version = "0.0.0" }
display = { path = "../display", version = "0.0.0" }
panels = { path = "../panels", version = "0.0.0" }
protos = { path = "../protos", version = "0.0.0" }
rules = { path = "../rules", version = "0.0.0" }
server = { path = "../server", version = "0.0.0" }
test_utils = { path = "../test_utils", version = "0.0.0" }
ui = { path = "../ui", version = "0.0.0" }

anyhow = "1.0.51"
prost = "0.9.0"
prost-build = "0.9.0"
prost-types = "0.9.0"
