[package]
name = "plugin"
version = "0.0.0"
description = "Unity native plugin for spelldawn"
license = "Apache-2.0"
edition = "2021"

[lib]
doctest = false
test = false
crate-type = ["cdylib", "staticlib"]

[dependencies]
cards = { path = "../cards", version = "0.0.0" }
protos = { path = "../protos", version = "0.0.0" }
server = { path = "../server", version = "0.0.0" }

anyhow = "1.0.58"
prost = "0.10.4"
