[package]
name = "protos"
version = "0.0.0"
description = "Generated protocol buffers code for the GRPC layer"
license = "Apache-2.0"
edition = "2021"

[lib]
doctest = false
test = false

[[bin]]
name = "gen_protos"
path = "src/gen_protos.rs"
test = false

[dependencies]
prost = "0.9.0"
prost-build = "0.9.0"
prost-types = "0.9.0"
tonic = "0.6.1"
tonic-build = "0.6.0"
