[package]
name = "protos"
version = "0.0.0"
description = "Generated protocol buffers code for the GRPC layer"
license = "Apache-2.0"
edition = "2021"

[lib]
doctest = false
test = false

[[bin]]
name = "gen_protos"
path = "src/gen_protos.rs"
test = false

[dependencies]
prost = "0.10.4"
tonic = { version = "0.7.2", features = ["compression"] }
tonic-build = { version = "0.7.2", features = ["compression"] }
