[package]
name = "raids"
version = "0.0.0"
description = "Implements state machine model for handling raids"
license = "Apache-2.0"
edition = "2021"

[lib]
doctest = false
test = false

[dependencies]
anyhow = "1.0.58"
fallible-iterator = "0.2.0"

data = { path = "../data", version = "0.0.0" }
rules = { path = "../rules", version = "0.0.0" }
with_error = { path = "../with_error", version = "0.0.0" }
