[package]
name = "rules"
version = "0.0.0"
description = "All game rules, card definitions, and associated helpers"
license = "Apache-2.0"
edition = "2021"

[lib]
doctest = false
test = false

[dependencies]
anyhow = "1.0.58"
dashmap = "5.3.4"
enum-iterator = "1.1.3"
fallible-iterator = "0.2.0"
once_cell = "1.13.0"
tracing = { version = "0.1.35", features = ["max_level_debug", "release_max_level_warn"] }

data = { path = "../data", version = "0.0.0" }
