[package]
name = "server"
version = "0.0.0"
description = "Top-level server response handling"
license = "Apache-2.0"
edition = "2021"

[lib]
doctest = false
test = false

[dependencies]
anyhow = "1.0.51"
concurrent-queue = "1.2.2"
dashmap = "5.0.0"
enum-iterator = "0.7.0"
maplit = "1.0.2"
once_cell = "1.8.0"
prost = "0.9.0"
prost-types = "0.9.0"
serde_json = "1.0.81"
sled = "0.34.7"
tokio = { version = "1.14.0", features = ["macros", "rt-multi-thread", "sync", "time"] }
tokio-stream = "0.1.8"
tonic = "0.6.1"
tracing = { version = "0.1.29" }

ai = { path = "../ai", version = "0.0.0" }
cards = { path = "../cards", version = "0.0.0" }
data = { path = "../data", version = "0.0.0" }
panels = { path = "../panels", version = "0.0.0" }
protos = { path = "../protos", version = "0.0.0" }
rules = { path = "../rules", version = "0.0.0" }
display = { path = "../display", version = "0.0.0" }
