[package]
name = "server"
version = "0.0.0"
description = "Top-level server response handling"
license = "Apache-2.0"
edition = "2021"

[lib]
doctest = false
test = false

[dependencies]
anyhow = "1.0.58"
concurrent-queue = "1.2.2"
dashmap = "5.3.4"
enum-iterator = "1.1.3"
once_cell = "1.13.0"
prost = "0.10.4"
serde_json = "1.0.82"
sled = "0.34.7"
tokio = { version = "1.19.2", features = ["macros", "rt-multi-thread", "sync", "time"] }
tokio-stream = "0.1.9"
tonic = "0.7.2"
tracing = "0.1.35"

adapters = { path = "../adapters", version = "0.0.0" }
ai = { path = "../ai", version = "0.0.0" }
cards = { path = "../cards", version = "0.0.0" }
data = { path = "../data", version = "0.0.0" }
panels = { path = "../panels", version = "0.0.0" }
protos = { path = "../protos", version = "0.0.0" }
rules = { path = "../rules", version = "0.0.0" }
display = { path = "../display", version = "0.0.0" }
