[package]
name = "spelldawn"
version = "0.0.0"
homepage = "https://github.com/thurn/spelldawn"
description = "Spelldawn: An asymmetric trading card game"
license = "Apache-2.0"
default-run = "spelldawn"
edition = "2021"
rust-version = "1.61"

[[bin]]
name = "spelldawn"
path = "src/main.rs"

[[bench]]
name = "benchmarks"
harness = false

[dependencies]
anyhow = "1.0.58"
maplit = "1.0.2"
once_cell = "1.13.0"
prost = "0.10.4"
prost-types = "0.10.1"
rand = "0.8.5"
serde = { version = "1.0.138", features = ["derive"] }
sled = "0.34.7"
tokio = { version = "1.19.2", features = ["macros", "rt-multi-thread", "sync", "time"] }
tokio-stream = "0.1.9"
tonic = { version = "0.7.2", features = ["compression"] }
tonic-web = "0.3.0"
tracing = "0.1.35"
tracing-subscriber = "0.3.14"

adapters = { path = "../adapters", version = "0.0.0" }
ai = { path = "../ai", version = "0.0.0" }
cards = { path = "../cards", version = "0.0.0" }
data = { path = "../data", version = "0.0.0" }
display = { path = "../display", version = "0.0.0" }
panels = { path = "../panels", version = "0.0.0" }
plugin = { path = "../plugin", version = "0.0.0" }
protos = { path = "../protos", version = "0.0.0" }
rules = { path = "../rules", version = "0.0.0" }
server = { path = "../server", version = "0.0.0" }
test_utils = { path = "../test_utils", version = "0.0.0" }
core_ui = { path = "../core_ui", version = "0.0.0" }

[dev-dependencies]
insta = "1.15.0"
rusty-hook = "0.11.2"
maplit = "1.0.2"
criterion = "0.3.5"
