[package]
name = "spelldawn"
version = "0.0.0"
homepage = "https://github.com/thurn/spelldawn"
description = "Spelldawn: An asymmetric trading card game"
license = "Apache-2.0"
default-run = "spelldawn"
edition = "2021"
rust-version = "1.61"

[[bin]]
name = "spelldawn"
path = "src/main.rs"

[[bench]]
name = "benchmarks"
harness = false

[dependencies]
tokio = { version = "1.19.2", features = ["macros", "rt-multi-thread", "sync", "time"] }
tonic = { version = "0.7.2", features = ["compression"] }
tonic-web = "0.3.0"
tower = { version = "0.4.13", features = ["make"] }
tower-http = { version = "0.3.4", features = ["fs"] }
tracing = "0.1.35"
tracing-subscriber = "0.3.14"

ai = { path = "../ai", version = "0.0.0" }
cards = { path = "../cards", version = "0.0.0" }
data = { path = "../data", version = "0.0.0" }
protos = { path = "../protos", version = "0.0.0" }
server = { path = "../server", version = "0.0.0" }
test_utils = { path = "../test_utils", version = "0.0.0" }
core_ui = { path = "../core_ui", version = "0.0.0" }

[dev-dependencies]
insta = "1.15.0"
rusty-hook = "0.11.2"
maplit = "1.0.2"
criterion = "0.3.5"
