[package]
name = "test_utils"
version = "0.0.0"
description = "Tools to facilitate testing"
license = "Apache-2.0"
edition = "2021"

[lib]
doctest = false
test = false

[dependencies]
anyhow = "1.0.51"
maplit = "1.0.2"
prost = "0.9.0"
prost-types = "0.9.0"
linkme = "0.2.10"

cards = { path = "../cards", version = "0.0.0" }
data = { path = "../data", version = "0.0.0" }
panels = { path = "../panels", version = "0.0.0" }
protos = { path = "../protos", version = "0.0.0" }
rules = { path = "../rules", version = "0.0.0" }
display2 = { path = "../display2", version = "0.0.0" }
server = { path = "../server", version = "0.0.0" }
