[package]
name = "test_utils"
version = "0.0.0"
description = "Tools to facilitate testing"
license = "Apache-2.0"
edition = "2021"

[lib]
doctest = false
test = false

[dependencies]
anyhow = "1.0.58"
maplit = "1.0.2"
prost = "0.10.4"

adapters = { path = "../adapters", version = "0.0.0" }
cards = { path = "../cards", version = "0.0.0" }
data = { path = "../data", version = "0.0.0" }
protos = { path = "../protos", version = "0.0.0" }
rules = { path = "../rules", version = "0.0.0" }
server = { path = "../server", version = "0.0.0" }
with_error = { path = "../with_error", version = "0.0.0" }
