[package]
name = "ui"
version = "0.0.0"
description = "Library for user interface rendering"
license = "Apache-2.0"
edition = "2021"

[lib]
doctest = false
test = false

[dependencies]
bincode = "1.3.3"

data = { path = "../data", version = "0.0.0" }
protos = { path = "../protos", version = "0.0.0" }
rules = { path = "../rules", version = "0.0.0" }
