[package]
name = "ui_game"
version = "0.0.0"
description = "Renders UI elements displayed during card game sessions"
license = "Apache-2.0"
edition = "2021"

[lib]
doctest = false
test = false

[dependencies]
serde_json = "1.0.81"

data = { path = "../data", version = "0.0.0" }
protos = { path = "../protos", version = "0.0.0" }
rules = { path = "../rules", version = "0.0.0" }
ui_core = { path = "../ui_core", version = "0.0.0" }
